Added support for IPv6 binds.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -19,6 +19,7 @@ userlist developers
 
 frontend http-in
     bind *:80
+    bind :::80
     default_backend servers
     acl login_page url_beg /login
 
