Fixed parsing error in globals section!

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -3,6 +3,7 @@
 # single server "server1" listening on 127.0.0.1:8000
 global
     maxconn 256
+    stats socket /var/run/haproxy.stats user haproxy group haproxy mode 700 level operator
     debug
     daemon
 
