Slightly better handling of keywords that can appear multiple times in a single proxy block.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -21,12 +21,14 @@ userlist developers
 frontend http-in
     bind *:80
     bind :::80
-
+    option httpclose
+    option httplog
     acl login_page url_beg /login
-
     default_backend servers
 
 backend servers
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request set-header X-Forwarded-Proto https if { ssl_fc }
     server server1 127.0.0.1:8000 maxconn 32
 
 listen ssh
