Fixed array to string conversion with parsing from file and req* parameters.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -23,6 +23,7 @@ frontend http-in
     bind            :::80
     option          httpclose
     option          httplog
+    reqidel         ^X-Forwarded-For:.*
     acl             login_page url_beg /login
     default_backend servers
 
