Fixed PHP error: Invalid argument supplied for foreach() in UserList::prettyPrint().

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -18,6 +18,9 @@ userlist developers
 
     user eddy password $6$mlskxjmqlkcnmlcjsmdl groups editor,admin
 
+userlist masters
+    user jules password $6$mlskxjmqlkcnmlcjsmdl
+
 frontend http-in
     bind            *:80
     bind            :::80
