Added options support for bind keyword.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -30,6 +30,11 @@ frontend http-in
     acl             login_page url_beg /login
     default_backend servers
 
+frontend https
+    bind :443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
+    bind :::443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
+    mode http
+
 backend servers
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
