Removed the odd daemon/debug/quiet implementation.

--- a/tests/haproxy-priority.conf
+++ b/tests/haproxy-priority.conf
@@ -1,8 +1,9 @@
 global
-    maxconn 256
-    stats   socket /var/run/haproxy.stats user haproxy group haproxy mode 700 level operator
     debug
     daemon
+    quiet
+    maxconn 256
+    stats   socket /var/run/haproxy.stats user haproxy group haproxy mode 700 level operator
 
 defaults
     mode    http
