--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -2,10 +2,11 @@
 # interfaces and forwarding requests to a single backend "servers" with a
 # single server "server1" listening on 127.0.0.1:8000
 global
-    maxconn 256
-    stats   socket /var/run/haproxy.stats user haproxy group haproxy mode 700 level operator
     debug
     daemon
+    quiet
+    maxconn 256
+    stats   socket /var/run/haproxy.stats user haproxy group haproxy mode 700 level operator
 
 defaults
     mode    http
