Allow mutiples of keyword tcp-check.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -43,3 +43,13 @@ backend servers
 
 listen ssh
     server ssh-host *:22 maxconn 3
+
+listen redis
+    bind      127.0.0.1:6379
+    mode      tcp
+    option    tcp-check
+    tcp-check send PING\r\n
+    tcp-check expect rstring (\+PONG|\-NOAUTH)
+    tcp-check send QUIT\r\n
+    tcp-check expect string +OK
+    server    remote-redis 192.168.0.15:6379 check fall 2 inter 1000ms
