Allow multiple entries for 'errorfile'.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -37,6 +37,8 @@ frontend https
     mode http
 
 backend servers
+    errorfile    503 /etc/haproxy/custom-errors/503.http
+    errorfile    403 /etc/haproxy/custom-errors/403.http
     http-request set-header X-Forwarded-Port %[dst_port]
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
     server       server1 127.0.0.1:8000 maxconn 32
