Allowed for correct handling of addBackend with conditions and line argument limitations in HAProxy. This change will break your code!

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -32,9 +32,11 @@ frontend http-in
     default_backend servers
 
 frontend https
-    bind :443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
-    bind :::443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
-    mode http
+    bind        :443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
+    bind        :::443 ssl crt /etc/ssl/cert1.pem crt /etc/ssl/cert2.pem crt /etc/ssl/cert3.pem crt /etc/ssl/cert4.pem crt /etc/ssl/cert5.pem crt /etc/ssl/cert6.pem crt /etc/ssl/cert7.pem crt /etc/ssl/cert8.pem crt /etc/ssl/cert9.pem crt /etc/ssl/tep.pem no-sslv3
+    mode        http
+    acl         is_host_example hdr(host) -i example.com
+    use_backend servers if is_host_example
 
 backend servers
     errorfile    503 /etc/haproxy/custom-errors/503.http
