Added support for resolvers block

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -14,6 +14,15 @@ defaults
     timeout client 50000ms
     timeout server 50000ms
 
+resolvers public-dns
+    nameserver      c1 1.1.1.1:53
+    nameserver      c2 1.0.0.1:53
+    nameserver      g1 8.8.8.8:53
+    nameserver      g2 8.8.4.4:53
+    resolve_retries 3
+    timeout         retry 1s
+    hold            valid 60s
+
 userlist developers
     group editor
 
