--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0",
-        "mikey179/vfsStream": "~1",
+        "mikey179/vfsstream": "~1",
         "symfony/var-dumper": "^3.4"
     },
     "autoload": {
