Increase param check for http-response keywords.

--- a/tests/haproxy.conf
+++ b/tests/haproxy.conf
@@ -47,6 +47,8 @@ frontend https
     acl           is_host_example hdr(host) -i example.com
     http-response del-header Server
     http-response del-header X-Powered-By
+    http-response set-header X-Robots-Tag "noindex, nofollow" if is_host_a
+    http-response set-header X-Robots-Tag "noindex, nofollow" if is_host_b
     use_backend   servers if is_host_example
 
 backend servers
